Use fixed positioning and only hide overflow-x for body

--- a/scenic.default.scss
+++ b/scenic.default.scss
@@ -3,7 +3,7 @@
 @import 'scenic';
 
 body.scenic-view {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 #scenic.default {
