--- a/scenic.scss
+++ b/scenic.scss
@@ -10,7 +10,7 @@ a.scenic {
   overflow: hidden;
   margin: 0;
   padding: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
 
